--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Hurtownia</string>
+    <string name="name_hint">Wprowadź login:</string>
+    <string name="password_hint">Wprowadź hasło:</string>
+    <string name="login_button">Zaloguj</string>
+    <string name="empty_login_or_password">Login i hasło nie mogą być puste!</string>
+    <string name="login_failed">Błędny login lub hasło!</string>
+    <string name="login_success">Zalogowano!</string>
 </resources>
