--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="location">Lokacja</string>
     <string name="settings">Ustawienia</string>
     <string name="logout">Wyloguj</string>
+    <string name="search">Wyszukaj</string>
 </resources>
