--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
-    <string name="app_name">Hurtownia</string>
     <string name="name_hint">Wprowadź login:</string>
     <string name="password_hint">Wprowadź hasło:</string>
     <string name="login_button">Zaloguj</string>
@@ -35,4 +34,7 @@
     <string name="or"> lub </string>
     <string name="gallety">Wybierz z galerii</string>
     <string name="add_product">Dodaj produkt</string>
+    <string name="route">Trasa</string>
+    <string name="empty">Pola nie mogą być puste!</string>
+    <string name="app_name">Hurtownia</string>
 </resources>
